Minor edits to word2vec presentation.

--- a/vpcoe_march2016/vpcoe_presentation.slides.html
+++ b/vpcoe_march2016/vpcoe_presentation.slides.html
@@ -2371,7 +2371,8 @@ av4/ps1T4+Xm3vAAAAAASUVORK5CYII=
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Examples">Examples<a class="anchor-link" href="#Examples">&#182;</a></h2><h3 id="Sentiment-Analysis">Sentiment Analysis<a class="anchor-link" href="#Sentiment-Analysis">&#182;</a></h3><p>Same health example as before but with classes as positive negative sentiment.</p>
-<h3 id="Named-Entity-Recognition">Named Entity Recognition<a class="anchor-link" href="#Named-Entity-Recognition">&#182;</a></h3>
+<h3 id="Named-Entity-Recognition">Named Entity Recognition<a class="anchor-link" href="#Named-Entity-Recognition">&#182;</a></h3><p>Example: The prices of <em>XYZ corporation</em> tanked by more than 30% on <em>new york stock exchange</em>.</p>
+
 </div>
 </div>
 </div><div class="fragment" data-fragment-index="14">
@@ -4069,7 +4070,7 @@ fEbG40ciEvru7MSJVrup0N/WM5ldkcbg/wP3guWHiGfO4gAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p>-- <cite>All images from Quoc V. Le tutorial on deep learning'</cite></p>
+<blockquote><p>-- <cite>All images from Quoc V. Le tutorial on deep learning</cite></p>
 </blockquote>
 
 </div>
@@ -7892,9 +7893,7 @@ Oy6XPTpWzoAAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Distributional-Hypothesis">Distributional Hypothesis<a class="anchor-link" href="#Distributional-Hypothesis">&#182;</a></h1><h2 id="Residents-of-city-of-Pune-will-have-to...">Residents of city of <em>Pune</em> will have to...<a class="anchor-link" href="#Residents-of-city-of-Pune-will-have-to...">&#182;</a></h2><h2 id="Residents-of-city-of-Nagpur-will-have-to..">Residents of city of <em>Nagpur</em> will have to..<a class="anchor-link" href="#Residents-of-city-of-Nagpur-will-have-to..">&#182;</a></h2><blockquote><p>Word is known by company it keeps</p>
-</blockquote>
-
+<h1 id="Distributional-Hypothesis">Distributional Hypothesis<a class="anchor-link" href="#Distributional-Hypothesis">&#182;</a></h1><h2 id="Residents-of-city-of-Pune-will-have-to...">Residents of city of <em>Pune</em> will have to...<a class="anchor-link" href="#Residents-of-city-of-Pune-will-have-to...">&#182;</a></h2><h2 id="Residents-of-city-of-Nagpur-will-have-to..">Residents of city of <em>Nagpur</em> will have to..<a class="anchor-link" href="#Residents-of-city-of-Nagpur-will-have-to..">&#182;</a></h2><h2 id="Word-is-known-by-company-it-keeps">Word is known by company it keeps<a class="anchor-link" href="#Word-is-known-by-company-it-keeps">&#182;</a></h2>
 </div>
 </div>
 </div></section>
